# atmopy

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml  tox.ini
docs/source/: about.rst  conf.py  index.rst
docs/source/_autoapi_templates/: index.rst
docs/source/models/: US_Standard_Atmosphere_1976.ipynb
src/atmopy/: __init__.py
src/atmopy/coesa76/: __init__.py  coesa76.py  constants.py  utils.py
tests/: test_import.py
